--- a/valuetransfer/src/main/res/layout/item_identity_attestation.xml
+++ b/valuetransfer/src/main/res/layout/item_identity_attestation.xml
@@ -13,14 +13,12 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginRight="4dp"
-        android:background="@drawable/pill_rounded"
-        android:backgroundTint="@color/white"
+        android:background="@drawable/square_rounded_dark"
         android:paddingHorizontal="12dp"
         android:paddingVertical="12dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:background="@color/white">
+        app:layout_constraintTop_toTopOf="parent">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/clChatContentOverview"
@@ -35,7 +33,7 @@
                 android:id="@+id/tvAttestationNameValue"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:textColor="@color/black"
+                android:textColor="@color/white"
                 android:textSize="14sp"
                 android:textStyle="bold"
                 app:layout_constraintStart_toStartOf="parent"
@@ -50,9 +48,9 @@
                 android:layout_marginEnd="12dp"
                 android:ellipsize="end"
                 android:maxLines="1"
-                android:textColor="@color/gray"
+                android:textColor="@color/light_gray"
                 android:textSize="14sp"
-                app:layout_constraintEnd_toStartOf="@+id/ivAttestationQRButton"
+                app:layout_constraintEnd_toStartOf="@+id/clAttestationQRButton"
                 app:layout_constraintStart_toEndOf="@+id/tvAttestationNameValue"
                 app:layout_constraintTop_toTopOf="parent"
                 tools:text="(id_metadata_range_18plus)" />
@@ -64,10 +62,10 @@
                 android:layout_marginEnd="12dp"
                 android:ellipsize="end"
                 android:maxLines="1"
-                android:textColor="@color/black"
+                android:textColor="@color/white"
                 android:textSize="14sp"
                 android:typeface="monospace"
-                app:layout_constraintEnd_toStartOf="@+id/ivAttestationQRButton"
+                app:layout_constraintEnd_toStartOf="@+id/clAttestationQRButton"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/tvAttestationNameValue"
                 tools:text="a63a167e5e39f1971072ad4779163d475b971072a" />
@@ -79,24 +77,38 @@
                 android:layout_marginEnd="12dp"
                 android:ellipsize="end"
                 android:maxLines="1"
-                android:textColor="@color/black"
+                android:textColor="@color/white"
                 android:textSize="14sp"
                 android:typeface="monospace"
-                app:layout_constraintEnd_toStartOf="@+id/ivAttestationQRButton"
+                app:layout_constraintEnd_toStartOf="@+id/clAttestationQRButton"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/tvAttestationHash"
                 tools:text="0000000091d00d959323796576f00000000091" />
 
-            <ImageView
-                android:id="@+id/ivAttestationQRButton"
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/clAttestationQRButton"
                 android:layout_width="0dp"
                 android:layout_height="0dp"
-                android:src="@drawable/ic_qr_code_scan"
-                app:layout_constraintBottom_toBottomOf="parent"
+                android:background="@drawable/pill_rounded"
+                android:backgroundTint="@color/colorPrimaryValueTransfer"
                 app:layout_constraintDimensionRatio="1:1"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:tint="@color/colorPrimaryValueTransfer" />
+                app:layout_constraintTop_toTopOf="parent">
+
+                <ImageView
+                    android:id="@+id/ivAttestationQRButton"
+                    android:layout_width="0dp"
+                    android:layout_height="0dp"
+                    android:padding="12dp"
+                    android:src="@drawable/ic_qr_code_scan"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintDimensionRatio="1:1"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:tint="@color/white"
+                    tools:tint="@color/white"/>
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
