--- a/valuetransfer/src/main/res/menu/identity_options.xml
+++ b/valuetransfer/src/main/res/menu/identity_options.xml
@@ -1,24 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
-        android:id="@+id/actionAddPersonalIdentity"
+        android:id="@+id/actionAddIdentity"
         android:icon="@drawable/ic_device_hub_black_24dp"
         android:title="Add Identity" />
     <item
-        android:id="@+id/actionEditPersonalIdentity"
+        android:id="@+id/actionEditIdentity"
         android:icon="@drawable/ic_device_hub_black_24dp"
         android:title="Edit Identity" />
     <item
-        android:id="@+id/actionRemovePersonalIdentity"
+        android:id="@+id/actionRemoveIdentity"
         android:icon="@drawable/ic_device_hub_black_24dp"
         android:title="Remove Identity" />
-    <item
-        android:id="@+id/actionAddAttestation"
-        android:icon="@drawable/ic_device_hub_black_24dp"
-        android:title="Add Attestation" />
-    <item
-        android:id="@+id/actionAddAttribute"
-        android:icon="@drawable/ic_device_hub_black_24dp"
-        android:title="Add Attribute" />
+<!--    <item-->
+<!--        android:id="@+id/actionAddAttestation"-->
+<!--        android:icon="@drawable/ic_device_hub_black_24dp"-->
+<!--        android:title="Add Attestation" />-->
+<!--    <item-->
+<!--        android:id="@+id/actionAddAttribute"-->
+<!--        android:icon="@drawable/ic_device_hub_black_24dp"-->
+<!--        android:title="Add Attribute" />-->
 
 </menu>
