--- a/valuetransfer/src/main/res/layout/item_identity_detail.xml
+++ b/valuetransfer/src/main/res/layout/item_identity_detail.xml
@@ -68,7 +68,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
-            android:text="Date / Place of Birth"
+            android:text="Date of Birth / Place of Birth"
             android:textColor="@color/white"
             android:textSize="10sp"
             android:textStyle="italic"
